--- a/result.html
+++ b/result.html
@@ -50,7 +50,7 @@
 </head>
 <body>
 
-  <div id="loaderText">Loading...</div>
+  <div id="loaderText">Generating...</div>
   <div id="twistText"></div>
   <div id="finalText">
     <div>No image was created.</div>
@@ -113,3 +113,4 @@
 
 </body>
 </html>
+
